Getting stuff to 'build'

--- a/Gjallarhorn.csproj
+++ b/Gjallarhorn.csproj
@@ -20,8 +20,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\STPlib\STPlib.csproj" />
-  </ItemGroup>
+  <!-- <ItemGroup> -->
+    <!-- <ProjectReference Include="..\STPlib\STPlib.csproj" /> -->
+  <!-- </ItemGroup> -->
 
 </Project>
