Updated to be independent from ChariotSanzzo, and on pair with all current music features

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,14 +1,11 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS dev
 WORKDIR /app
 
-
-# COPY . ./
-# RUN export DOTNET_NUGET_XMLDOC_MODE=skip
-# RUN dotnet restore
-
-EXPOSE 11767
+COPY . /app
+RUN dotnet restore
 
 ENV DOTNET_WATCH_HOT_RELOAD_ENABLED=true
 ENV DOTNET_WATCH_RESTART_ON_RUDE_EDIT=1
+EXPOSE 11767
 
 ENTRYPOINT ["dotnet", "watch", "run", "--urls=http://0.0.0.0:11767"]
